feat: implement product catalog management

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,11 @@ APP_NAME="GameGear Shop Service"
 APP_VERSION="1.0.0"
 
 # Database Configuration
-DATABASE_URL="host=localhost user=postgres password=your_password dbname=gamegear_shop_db port=5432 sslmode=disable"
+DATABASE_URL="host=localhost user=dev password=dev dbname=gamegear_shop_db port=5432 sslmode=disable"
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=your_password
+DB_USER=dev
+DB_PASSWORD=dev
 DB_NAME=gamegear_shop_db
 
 # JWT Configuration
